🔗 Update URLs in project files: Changed all references from the old domain to the new GitHub Pages URL (https://noagiannone03.github.io/piCO2-project) across multiple HTML and Python files, ensuring consistent navigation and access to resources. Updated Firebase architecture documentation to reflect the new domain.

--- a/charts.html
+++ b/charts.html
@@ -662,7 +662,7 @@
                 <p class="subtitle">Données CO2 avancées et tendances historiques</p>
             </div>
             <div class="header-nav">
-                <a href="/" class="nav-btn">
+                <a href="https://noagiannone03.github.io/piCO2-project/" class="nav-btn">
                     ← Retour au dashboard
                 </a>
                 <button class="nav-btn" onclick="refreshAll()">
