--- a/config.html
+++ b/config.html
@@ -394,11 +394,11 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/" class="logo">
+            <a href="https://noagiannone03.github.io/piCO2-project/" class="logo">
                 🌱 My Pico
             </a>
             <div class="nav-actions">
-                <a href="/dashboard" class="btn btn-secondary">
+                <a href="https://noagiannone03.github.io/piCO2-project/dashboard.html" class="btn btn-secondary">
                     ← Retour au dashboard
                 </a>
             </div>
@@ -465,7 +465,7 @@
                     <button class="btn btn-primary" onclick="restartSearch()">
                         🔄 Relancer la recherche
                     </button>
-                    <a href="/setup" class="btn btn-outline">
+                    <a href="https://noagiannone03.github.io/piCO2-project/setup.html" class="btn btn-outline">
                         📖 Revoir le tutoriel
                     </a>
                 </div>
@@ -522,7 +522,7 @@
                     startDeviceSearch();
                 } else {
                     // Rediriger vers la connexion
-                    window.location.href = '/dashboard';
+                    window.location.href = 'https://noagiannone03.github.io/piCO2-project/dashboard.html';
                 }
             });
         });
@@ -657,7 +657,7 @@
             });
 
             setTimeout(() => {
-                window.location.href = '/dashboard';
+                window.location.href = 'https://noagiannone03.github.io/piCO2-project/dashboard.html';
             }, 3000);
         }
 
