--- a/dashboard.html
+++ b/dashboard.html
@@ -822,7 +822,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/" class="logo">
+            <a href="https://noagiannone03.github.io/piCO2-project/" class="logo">
                 🌱 My Pico
             </a>
             <div class="nav-actions">
@@ -908,14 +908,14 @@
         <section class="devices-section">
             <div class="section-header">
                 <h2 class="section-title">📡 Mes Capteurs</h2>
-                <a href="/setup" class="btn btn-primary">
+                <a href="https://noagiannone03.github.io/piCO2-project/setup.html" class="btn btn-primary">
                     ➕ Configurer un nouveau Pico
                 </a>
             </div>
 
             <div id="devicesGrid" class="devices-grid">
                 <!-- Les appareils seront ajoutés dynamiquement -->
-                <div class="add-device-card" onclick="window.location.href='/setup'">
+                <div class="add-device-card" onclick="window.location.href='https://noagiannone03.github.io/piCO2-project/setup.html'">
                     <div class="add-device-icon">🚀</div>
                     <h3 class="add-device-title">Configurer votre premier Pico</h3>
                     <p class="add-device-description">
@@ -941,7 +941,7 @@
                 </p>
                 <p style="color: var(--text-secondary);">
                     Pour une configuration normale, utilisez le 
-                    <a href="/setup" style="color: var(--primary); text-decoration: none;">tutoriel de configuration</a>.
+                    <a href="https://noagiannone03.github.io/piCO2-project/setup.html" style="color: var(--primary); text-decoration: none;">tutoriel de configuration</a>.
                 </p>
             </div>
             
@@ -1288,11 +1288,11 @@
         };
 
         window.goToPublicDashboard = function() {
-            window.location.href = '/';
+            window.location.href = 'https://noagiannone03.github.io/piCO2-project/';
         };
 
         window.viewDevice = function(deviceId) {
-            window.location.href = `/device/${deviceId}`;
+            window.location.href = `https://noagiannone03.github.io/piCO2-project/device.html?id=${deviceId}`;
         };
 
         window.configureDevice = function(deviceId) {
