--- a/device.html
+++ b/device.html
@@ -723,7 +723,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/" class="logo">
+            <a href="https://noagiannone03.github.io/piCO2-project/" class="logo">
                 🌱 My Pico
             </a>
             <div class="nav-actions">
@@ -912,7 +912,7 @@
                     loadDeviceData();
                 } else {
                     // Rediriger vers la connexion
-                    window.location.href = '/dashboard';
+                    window.location.href = 'https://noagiannone03.github.io/piCO2-project/dashboard.html';
                 }
             });
 
@@ -1298,7 +1298,7 @@
 
         // Fonctions globales
         window.goBack = function() {
-            window.location.href = '/dashboard';
+            window.location.href = 'https://noagiannone03.github.io/piCO2-project/dashboard.html';
         };
 
         window.refreshData = function() {
