--- a/index.html
+++ b/index.html
@@ -829,10 +829,10 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/" class="logo">🌱 My Pico</a>
+            <a href="https://noagiannone03.github.io/piCO2-project/" class="logo">🌱 My Pico</a>
             <div class="nav-actions">
-                <a href="/charts" class="btn btn-secondary">📊 Données détaillées</a>
-                <a href="dashboard.html" class="btn btn-primary">🔐 Mon Dashboard</a>
+                <a href="https://noagiannone03.github.io/piCO2-project/charts.html" class="btn btn-secondary">📊 Données détaillées</a>
+                <a href="https://noagiannone03.github.io/piCO2-project/dashboard.html" class="btn btn-primary">🔐 Mon Dashboard</a>
             </div>
         </div>
     </nav>
@@ -846,7 +846,7 @@
                 Rejoignez la communauté et contribuez à un Marseille plus respirable !
             </p>
             <div class="cta-section">
-                <a href="dashboard.html" class="btn btn-primary">🚀 Rejoindre la communauté</a>
+                <a href="https://noagiannone03.github.io/piCO2-project/dashboard.html" class="btn btn-primary">🚀 Rejoindre la communauté</a>
                 <a href="#data" class="btn btn-secondary">📍 Voir la carte</a>
             </div>
         </div>
@@ -997,7 +997,7 @@
                     Commandez votre capteur Pico ou rejoignez notre communauté de surveillance collaborative
                 </p>
                 <div class="cta-section">
-                    <a href="dashboard.html" class="btn btn-primary">🚀 Créer mon compte</a>
+                    <a href="https://noagiannone03.github.io/piCO2-project/dashboard.html" class="btn btn-primary">🚀 Créer mon compte</a>
                     <a href="mailto:contact@mypico-marseille.fr" class="btn btn-secondary">📧 Nous contacter</a>
                 </div>
             </div>
