🎨 Enhance UI and improve configuration flow: Updated styles in aircarto_complete.py and setup.html for a more modern look, added progress indicators, and refined step navigation for the Pico configuration process. Improved device ID handling in config.html and enhanced WiFi detection logic for better user experience.

--- a/config.html
+++ b/config.html
@@ -528,6 +528,12 @@
         });
 
         function getDeviceIdFromURL() {
+            // Essayer d'abord le paramètre URL
+            const params = new URLSearchParams(window.location.search);
+            const idFromParam = params.get('id');
+            if (idFromParam) return idFromParam;
+            
+            // Sinon essayer le path (pour compatibilité)
             const path = window.location.pathname;
             const parts = path.split('/');
             return parts[parts.length - 1];
